Changes in 1.5.18 (dd month 2020)
* Added support of HDF5 v1.12.x
* Added support for UTF-8 encoded file name on Windows (MSVC)
  (requires HDF5 >= v1.11.6 for HDF5 MAT file)
* Added support for reading uncompressed v5 MAT file generated by SWAN
* Fixed read performance of numeric array from compressed v5 MAT file
* Fixed support for VS2005 and VS2008 (MSVC) (regression of v1.5.15)
* Fixed mktemp linker warning when using GNU linker
* Fixed bug writing struct array to uncompressed v5 MAT file on big endian
  architecture (regression of v1.5.10)
* Fixed bug writing cell array to uncompressed v5 MAT file on big endian architecture
* Fixed bug reading variable name from v4 MAT file (CVE-2019-17533)
* Fixed bug reading dimensions from (crafted) compressed v5 MAT file (CVE-2019-20017,
  CVE-2019-20018, CVE-2019-20020, CVE-2019-20052)

Changes in 1.5.17 (18 July 2019)
* Fixed bug reading struct array with packed field names from v5 MAT file
* Fixed bug reading past EOF from (crafted) uncompressed v5 MAT file

Changes in 1.5.16 (25 June 2019)
* Fixed error handling on integer addition/multiplication overflows (CVE-2019-13107)

Changes in 1.5.15 (29 March 2019)
* Added new API function Mat_GetHeader to retrieve header string of a MAT file
* Fixed integer multiplication overflows when calculating total number of
  elements from (crafted) MAT file
* Fixed bug reading character array from (compressed) v5 MAT file (regression
  of v1.5.14)
* Fixed number of variables for repeated calls of Mat_GetDir
* Fixed memory leak in Mat_VarFree for function class

Changes in 1.5.14 (11 March 2019)
* Deprecated usage of Mat_VarWriteInfo/Mat_VarWriteData in favor of
  Mat_VarWrite/Mat_VarWriteAppend
* Fixed bug reading dimensions from (crafted) compressed v5 MAT file (CVE-2019-9026,
  CVE-2019-9027, CVE-2019-9028, CVE-2019-9029, CVE-2019-9030, CVE-2019-9031, CVE-2019-9032,
  CVE-2019-9033, CVE-2019-9034, CVE-2019-9035, CVE-2019-9036, CVE-2019-9038)