@@ -14,8 +14,9 @@ Table of Contents
   2.2 Building matio
     2.2.1 Quick Build Guide
     2.2.2 Configure Options
-    2.2.3 Visual Studio
-    2.2.4 Testsuite
+    2.2.3 CMake build system
+    2.2.4 Visual Studio
+    2.2.5 Testsuite
   2.3 Platforms
 3.0 License
 
@@ -47,7 +48,7 @@ Table of Contents
 
     1.3 Contributing
         If you are interested in collaborations, contact me via email (see
-        Section 1.1).
+        section 1.1).
 
     1.4 Questions and Reporting Bugs
         Questions can be asked using the forums on the sourceforge site hosting
@@ -58,7 +59,7 @@ Table of Contents
 
 2.0 Building
     This section describes how to build matio. Section 2.1 describes the
-    dependencies, Section 2.2 how to build/test matio, and Section 2.3
+    dependencies, section 2.2 how to build/test matio, and section 2.3
     documents the platforms matio has been tested on.
 
     2.1 Dependencies
@@ -97,10 +98,10 @@ Table of Contents
 
     2.2 Building matio
         2.2.1 Quick Build Guide
-            The primary method for building the software is using 'configure'
-            followed by 'make'. After building, the testsuite can be executed to
-            test the software using 'make check'. The software can be installed
-            using 'make install'. For example,
+            The primary method for building the software is with is with GNU
+            autotools using 'configure' followed by 'make'. After building, the
+            testsuite can be executed to test the software using 'make check'.
+            The software can be installed using 'make install'. For example,
                 $ tar zxf matio-X.Y.Z.tar.gz
                 $ cd matio-X.Y.Z
                 $ ./configure
@@ -109,7 +110,7 @@ Table of Contents
                 $ make install
 
             If any of the tests in the testsuite fail, you should report the failure
-            using the tracker (see Section 1.4). You should attach the generated
+            using the tracker (see section 1.4). You should attach the generated
             testsuite.log file to the bug report.
 
         2.2.2 Configure Options
@@ -117,41 +118,75 @@ Table of Contents
             options. This section describes the key options.
 
               * '--enable-mat73=yes'
-                  This flag en/disables the support for version 7.3 MAT files.
-                  The option only makes sense if built with HDF5 as support for
-                  version 7.3 files. It will be disabled if HDF5 is not
-                  available.
+                This flag en/disables the support for version 7.3 MAT files.
+                The option only makes sense if built with HDF5 as support for
+                version 7.3 files. It will be disabled if HDF5 is not available.
               * '--enable-extended-sparse=yes'
-                  Enable extended sparse matrix data types not supported in
-                  MATLAB. MATLAB only supports double-precision sparse data.
-                  With this flag, matio will read sparse data with other types
-                  (i.e. single-precision and integer types).
+                Enable extended sparse matrix data types not supported in
+                MATLAB. MATLAB only supports double-precision sparse data.
+                With this flag, matio will read sparse data with other types
+                (i.e. single-precision and integer types).
               * '--with-matlab=DIR'
-                  This option specifies the directory (DIR) with the 'matlab'
-                  program. With this option, the testsuite will check that the
-                  MAT files written by matio can be read into MATLAB. Without
-                  this, the test will only check that matio can read the file
-                  written and if successful the test will be skipped. If matio
-                  can not read the file, the test will fail.
+                This option specifies the directory (DIR) with the 'matlab'
+                program. With this option, the testsuite will check that the
+                MAT files written by matio can be read into MATLAB. Without
+                this, the test will only check that matio can read the file
+                written and if successful the test will be skipped. If matio
+                can not read the file, the test will fail.
               * '--with-zlib=DIR'
-                  This option specifies the prefix where zlib is installed
-                  (see Section 2.1.1 for information about zlib).
+                This option specifies the prefix where zlib is installed
+                (see section 2.1.1 for information about zlib).
               * '--with-hdf5=DIR'
-                  This option specifies the prefix where the HDF5 software is
-                  installed (see Section 2.1.2 for information about HDF5).
+                This option specifies the prefix where the HDF5 software is
+                installed (see section 2.1.2 for information about HDF5).
               * '--with-default-file-ver=version'
-                  This option sets the default MAT file version (4,5,7.3) that
-                  will be used when writing. The default file version is used
-                  by the Mat_Create macro and the Mat_CreateVer function when
-                  MAT_FT_DEFAULT is used for the version argument.
+                This option sets the default MAT file version (4,5,7.3) that
+                will be used when writing. The default file version is used
+                by the Mat_Create macro and the Mat_CreateVer function when
+                MAT_FT_DEFAULT is used for the version argument.
               * '--with-libdir-suffix=suffix'
-                  This option specifies a suffix to apply to library
-                  directories when installing and looking for dependent
-                  libraries (i.e. HDF5 and zlib). For example, some multi-arch
-                  Linux distributions install 64-bit libraries into lib64 and
-                  32-bit libraries into lib.
+                This option specifies a suffix to apply to library
+                directories when installing and looking for dependent
+                libraries (i.e. HDF5 and zlib). For example, some multi-arch
+                Linux distributions install 64-bit libraries into lib64 and
+                32-bit libraries into lib.
 
-        2.2.3 Visual Studio
+        2.3.3. CMake build system
+            The CMake build system is supported as an alternative build system,
+            which usually consists of three steps for configuration, build and
+            installation, for example,
+                $ tar zxf matio-X.Y.Z.tar.gz
+                $ cd matio-X.Y.Z
+                $ cmake .
+                $ cmake --build .
+                $ cmake --install .
+
+            The following matio specific options for building with CMake are
+            available.
+
+              * 'MATIO_DEFAULT_FILE_VERSION:STRING=5'
+                This option sets the default MAT file version (4,5,7.3) that
+                will be used when writing.
+              * 'MATIO_EXTENDED_SPARSE:BOOL=ON'
+                This option enables extended sparse matrix data types not
+                supported in MATLAB.
+              * 'MATIO_MAT73:BOOL=ON'
+                This flag enables the support for version 7.3 MAT files.
+              * 'MATIO_PIC:BOOL=ON'
+                This option enables position-independent code (PIC),
+                i.e., compilation with the '-fPIC' flag. It is ignored for
+                Visual Studio builds.
+              * 'MATIO_SHARED:BOOL=ON'
+                This option builds the matio library as shared object
+                (i.e., a dynamic link library on Windows).
+              * 'MATIO_WITH_HDF5:BOOL=ON'
+                This option enables CMake to check for availability of the
+                HDF5 library (see section 2.1.2 for information about HDF5).
+              * 'MATIO_WITH_ZLIB:BOOL=ON'
+                This option enables CMake to check for availability of the
+                zlib library (see section 2.1.1 for information about zlib).
+
+        2.2.4 Visual Studio
             Visual Studio solutions are provided as visual_studio/matio_vs2008.sln
             for VS2008 and as visual_studio/matio.sln for VS2010 (and newer).
             The Debug and Release configurations of both solutions are set up to
@@ -165,7 +200,7 @@ Table of Contents
             static LIB of the matio library (libmatio.lib) and assumes that the
             static libraries of HDF5 (and zlib) are installed/built.
 
-        2.2.4 Testsuite
+        2.2.5 Testsuite
             A testsuite is available when building with the GNU autotools. To
             run the testsuite, first configure and build matio. After building
             run 'make check' to run the testsuite. If matio was built without
@@ -178,7 +213,7 @@ Table of Contents
 
             To report matio testsuite failures, compress the testsuite.log file
             in the test sub-directory of the build directory. Upload the
-            compressed log file along with a bug report (see Section 1.4 for
+            compressed log file along with a bug report (see section 1.4 for
             information on reporting bugs).
 
     2.3 Platforms
