@@ -17,8 +17,9 @@ MATLAB MAT file I/O library
   * 2.2 [Building matio](#22-building-matio)
     * 2.2.1 [Quick Build Guide](#221-quick-build-guide)
     * 2.2.2 [Configure Options](#222-configure-options)
-    * 2.2.3  [Visual Studio](#223-visual-studio)
-    * 2.2.4 [Testsuite](#224-testsuite)
+    * 2.2.3 [CMake build system](#223-cmake-build-system)
+    * 2.2.4 [Visual Studio](#224-visual-studio)
+    * 2.2.5 [Testsuite](#225-testsuite)
   * 2.3 [Platforms](#23-platforms)
 3. [License](#30-license)
 
@@ -46,7 +47,7 @@ The following people/organizations have helped in the development of matio throu
 * Steven Leibman <sleibman@alum.mit.edu>
 
 ### 1.3 Contributing
-If you are interested in collaborations, contact me via email (see Section [1.1](#11-contact)).
+If you are interested in collaborations, contact me via email (see section [1.1](#11-contact)).
 
 ### 1.4 Questions and Reporting Bugs
 Questions can be asked using the forums on the sourceforge site hosting matio ([https://sourceforge.net/p/matio/discussion](https://sourceforge.net/p/matio/discussion)).
@@ -54,7 +55,7 @@ Questions can be asked using the forums on the sourceforge site hosting matio ([
 Bugs, enhancements, etc. should be submitted using one of the trackers on the sourceforge page ([https://sourceforge.net/p/matio/_list/tickets](https://sourceforge.net/p/matio/_list/tickets)).
 
 ## 2.0 Building
-This section describes how to build matio. Section [2.1](#21-dependencies) describes the dependencies, Section [2.2](#22-building-matio) how to build/test matio, and Section [2.3](#23-platforms) documents the platforms matio has been tested on.
+This section describes how to build matio. Section [2.1](#21-dependencies) describes the dependencies, section [2.2](#22-building-matio) how to build/test matio, and section [2.3](#23-platforms) documents the platforms matio has been tested on.
 
 ### 2.1 Dependencies
 Matio has two optional dependencies. These are not required for the software to work, but without them some files may be unreadable. Zlib is required to read/write level 5 MAT files that use compression. HDF5 is required to work with newer MAT files that use the HDF5-format files.
@@ -73,8 +74,8 @@ For Windows, the pre-compiled binaries can be used which also include a DLL of z
 
 ### 2.2 Building matio
 #### 2.2.1 Quick Build Guide
-The primary method for building the software is using `configure` followed by `make`. After building, the testsuite can be executed to test the software using `make check`. The software can be installed using `make install`. For example,
-```sh
+The primary method for building the software is with GNU autotools using `configure` followed by `make`. After building, the testsuite can be executed to test the software using `make check`. The software can be installed using `make install`. For example,
+```console
 git clone git://git.code.sf.net/p/matio/matio
 cd matio
 git submodule update --init  # for datasets used in unit tests
@@ -84,27 +85,53 @@ make
 make check
 make install
 ```
-If any of the tests in the testsuite fail, you should report the failure using the tracker (see Section [1.4](#14-questions-and-reporting-bugs)). You should attach the generated testsuite.log file to the bug report.
+If any of the tests in the testsuite fail, you should report the failure using the tracker (see section [1.4](#14-questions-and-reporting-bugs)). You should attach the generated testsuite.log file to the bug report.
 
 #### 2.2.2 Configure Options
 The configure script used to build the software takes a number of options. This section describes the key options.
 
 * `--enable-mat73=yes`
-This flag en/disables the support for version 7.3 MAT files. The option only makes sense if built with HDF5 as support for version 7.3 files. It will be disabled if HDF5 is not available.
+This flag enables the support for version 7.3 MAT files. The option only makes sense if built with HDF5 as support for version 7.3 files. It will be disabled if HDF5 is not available.
 * `--enable-extended-sparse=yes`
-Enable extended sparse matrix data types not supported in MATLAB. MATLAB only supports double-precision sparse data. With this flag, matio will read sparse data with other types (i.e. single-precision and integer types).
+This option enables extended sparse matrix data types not supported in MATLAB. MATLAB only supports double-precision sparse data. With this flag, matio will read sparse data with other types (i.e. single-precision and integer types).
 * `--with-matlab=DIR`
 This option specifies the directory (DIR) with the 'matlab' program. With this option, the testsuite will check that the MAT files written by matio can be read into MATLAB. Without this, the test will only check that matio can read the file written and if successful the test will be skipped. If matio can not read the file, the test will fail.
 * `--with-zlib=DIR`
-This option specifies the prefix where zlib is installed (see Section [2.1.1](#211-zlib) for information about zlib).
+This option specifies the prefix where zlib is installed (see section [2.1.1](#211-zlib) for information about zlib).
 * `--with-hdf5=DIR`
-This option specifies the prefix where the HDF5 software is installed (see Section [2.1.2](#212-hdf5) for information about HDF5).
+This option specifies the prefix where the HDF5 software is installed (see section [2.1.2](#212-hdf5) for information about HDF5).
 * `--with-default-file-ver=version`
 This option sets the default MAT file version (4,5,7.3) that will be used when writing. The default file version is used by the Mat_Create macro and the Mat_CreateVer function when MAT_FT_DEFAULT is used for the version argument.
 * `--with-libdir-suffix=suffix`
 This option specifies a suffix to apply to library directories when installing and looking for dependent libraries (i.e. HDF5 and zlib). For example, some multi-arch Linux distributions install 64-bit libraries into lib64 and 32-bit libraries into lib.
 
-#### 2.2.3 Visual Studio
+#### 2.2.3 CMake build system
+The CMake build system is supported as an alternative build system, which usually consists of three steps for configuration, build and installation, for example,
+```console
+git clone git://git.code.sf.net/p/matio/matio
+cd matio
+cmake .
+cmake --build .
+cmake --install .
+```
+The following matio specific options for building with CMake are available.
+
+* `MATIO_DEFAULT_FILE_VERSION:STRING=5`
+This option sets the default MAT file version (4,5,7.3) that will be used when writing.
+* `MATIO_EXTENDED_SPARSE:BOOL=ON`
+This option enables extended sparse matrix data types not supported in MATLAB.
+* `MATIO_MAT73:BOOL=ON`
+This flag enables the support for version 7.3 MAT files.
+* `MATIO_PIC:BOOL=ON`
+This option enables position-independent code (PIC), i.e., compilation with the `-fPIC` flag. It is ignored for Visual Studio builds.
+* `MATIO_SHARED:BOOL=ON`
+This option builds the matio library as shared object (i.e., a dynamic link library on Windows).
+* `MATIO_WITH_HDF5:BOOL=ON`
+This option enables CMake to check for availability of the HDF5 library (see section [2.1.2](#212-hdf5) for information about HDF5).
+* `MATIO_WITH_ZLIB:BOOL=ON`
+This option enables CMake to check for availability of the zlib library (see section [2.1.1](#211-zlib) for information about zlib).
+
+#### 2.2.4 Visual Studio
 Visual Studio solutions are provided as [matio_vs2008.sln](visual_studio/matio_vs2008.sln) for VS2008 and as [matio.sln](visual_studio/matio.sln) for VS2010 (and newer). The Debug and Release configurations of both solutions are set up to build a DLL of the matio library (libmatio.dll) and the matdump tool and assume HDF5 is available in the directory specified by the HDF5_DIR environment variable. It is assumed that the **shared** libraries of HDF5 (and zlib) are available. If the **static** libraries of HDF5 (and zlib) are installed/built the macro `H5_BUILT_AS_STATIC_LIB` needs to be defined (instead of `H5_BUILT_AS_DYNAMIC_LIB`). Furthermore, the Release Lib configuration of the VS2010 solution is set up to build a static LIB of the matio library (libmatio.lib) and assumes that the **static** libraries of HDF5 (and zlib) are installed/built.
 
 * The VS2008 solution was tested with Visual Studio 2008 and the [HDF5 1.8.12 Visual Studio pre-built Windows binaries](https://support.hdfgroup.org/ftp/HDF5/releases/hdf5-1.8/hdf5-1.8.12/bin/windows/) (vs9shared) including zlib.
@@ -112,10 +139,10 @@ Visual Studio solutions are provided as [matio_vs2008.sln](visual_studio/matio_v
 * The VS2010 solution was tested with Visual Studio 2010 and the [HDF5 1.8.13 Visual Studio pre-built Windows binaries](https://support.hdfgroup.org/ftp/HDF5/releases/hdf5-1.8/hdf5-1.8.13/bin/windows/) (VS2010-static) including zlib.
 * The updated VS2010 solution was tested with Visual Studio 2015 and the [HDF5 1.8.16 Visual Studio pre-built Windows binaries](https://support.hdfgroup.org/ftp/HDF5/releases/hdf5-1.8/hdf5-1.8.16/bin/windows/extra/) (vs2015-shared) including zlib.
 
-#### 2.2.4 Testsuite
+#### 2.2.5 Testsuite
 A testsuite is available when building with the GNU autotools. To run the testsuite, first configure and build matio. After building run `make check` to run the testsuite. If matio was built without zlib, the compressed variable tests will be skipped. If built without HDF5, the tests for version 7.3 MAT files will be skipped. If the path to the MATLAB application was not specified (`--with-matlab`), the write tests will fail if matio cannot read the file and skip if matio can read the file. The write tests will pass if MATLAB is available and can also read the file.
 
-To report matio testsuite failures, compress the testsuite.log file in the test sub-directory of the build directory. Upload the compressed log file along with a bug report (see Section [1.4](#14-questions-and-reporting-bugs) for information on reporting bugs).
+To report matio testsuite failures, compress the testsuite.log file in the test sub-directory of the build directory. Upload the compressed log file along with a bug report (see section [1.4](#14-questions-and-reporting-bugs) for information on reporting bugs).
 
 ### 2.3 Platforms
 The library has been tested/used on Linux, Windows, and OS X including both little-endian and big-endian architecture.
