@@ -3,6 +3,7 @@ Changes in 1.5.18 (dd month 2020)
 * Added support for UTF-8 encoded file name on Windows (MSVC)
   (requires HDF5 >= v1.11.6 for HDF5 MAT file)
 * Added support for reading uncompressed v5 MAT file generated by SWAN
+* Added support for CMake build system
 * Fixed read performance of numeric array from compressed v5 MAT file
 * Fixed support for VS2005 and VS2008 (MSVC) (regression of v1.5.15)
 * Fixed mktemp linker warning when using GNU linker
